# Chatbot_AI

./: README.md  openapi.json  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  pyproject.toml
backend/api/: pyproject.toml
backend/api/src/api/: database.py
backend/api/src/api/endpoints/: citizens.py  departments.py  officials.py  tickets.py  turnos.py
backend/api/src/api/router/: citizens.py
backend/api/src/api/schemas/: ticket.py  turno.py
backend/api/src/api/v1/: api.py
backend/rasa/: .gitignore  config.yml  domain.yml  requirements.txt
backend/rasa-chat/: .env.example  Dockerfile.actions  Dockerfile.rasa  README.md  docker-compose.example.yml  pyproject.toml
backend/rasa-chat/.config/rasa/: global.yml
backend/rasa-chat/src/rasa-chat/: config.yml  credentials.yml  domain.yml  endpoints.yml
backend/rasa-chat/src/rasa-chat/actions/: __init__.py  actions.py
backend/rasa-chat/src/rasa-chat/data/: nlu.yml  nlu.yml.bak.20251030002057  rules.yml  stories.yml
backend/rasa-chat/src/rasa-chat/scripts/: generate_faq_nlu.py
backend/rasa-chat/src/rasa-chat/tests/: test_actions.py
backend/rasa/.rasa/cache/: cache.db
backend/rasa/.rasa/cache/tmp8sdkp8j7/: synonyms.json
backend/rasa/.rasa/cache/tmpialhzhxy/: memorized_turns.json
backend/rasa/.rasa/cache/tmpqnsmu40u/: vocabularies.json
backend/rasa/actions/: actions.py
backend/rasa/data/: nlu.yml  rules.yml  stories.yml
backend/src/api/: crud.py  main.py  models.py
backend/src/api/router/: appointments.py  tickets.py
backend/src/rasa/data/: rules.yml
(+37 files in other folders)
