[project]
name = "rasa-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "jonanfu", email = "jonanfu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.9"

dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
